Implement new Design Pattern and Implement JWT Authentication

--- a/Beginners_CRUD_EvtApi/Beginners_CRUD_EvtApi/appsettings.json
+++ b/Beginners_CRUD_EvtApi/Beginners_CRUD_EvtApi/appsettings.json
@@ -1,12 +1,20 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\sqlexpress;database=beginnerswebapievt;trusted_connection=true"
+    "DefaultConnection": "server=localhost\\sqlexpress;database=beginnerswebapievt;trusted_connection=true",
+    "BeginnersWebApiEvt": "mongodb+srv://darknerss:anavivian32@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtConfig": {
+    "Key": "Complicated Random Private Key"
+  },
+  "DatabaseConfig": {
+    "DatabaseName": "BeginnersWebApiEvt",
+    "ConnectionString": "mongodb+srv://darknerss:anavivian32@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
   },
   "AllowedHosts": "*"
 }
