--- a/Beginners_CRUD_EvtApi/Beginners_CRUD_EvtApi/appsettings.json
+++ b/Beginners_CRUD_EvtApi/Beginners_CRUD_EvtApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\sqlexpress;database=beginnerswebapievt;trusted_connection=true",
-    "BeginnersWebApiEvt": "mongodb+srv://darknerss:anavivian32@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
+    "BeginnersWebApiEvt": "mongodb+srv://darknerss:g9v3ZAAn4BMHzRzm@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
@@ -14,7 +14,7 @@
   },
   "DatabaseConfig": {
     "DatabaseName": "BeginnersWebApiEvt",
-    "ConnectionString": "mongodb+srv://darknerss:anavivian32@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
+    "ConnectionString": "mongodb+srv://darknerss:g9v3ZAAn4BMHzRzm@cluster0.5job1.mongodb.net/?retryWrites=true&w=majority"
   },
   "AllowedHosts": "*"
 }
